extremely tentatively, remove the InParens ast node

--- a/elara.cabal
+++ b/elara.cabal
@@ -292,6 +292,7 @@ test-suite elara-test
       Orphans
       Parse
       Parse.Common
+      Parse.Expressions
       Parse.Patterns
       Shunt
       Paths_elara
