--- a/stack.yaml
+++ b/stack.yaml
@@ -11,10 +11,10 @@ allow-newer: false
 
 extra-deps:
 - git: git@github.com:ElaraLang/h2jvm.git
-  commit: e9273dc2561136c2e62603700b55aca6fa1804fe
+  commit: b1c9cdfb6ead7f8619c8bb8c1b096acb8e986a99
 - git: git@github.com:knightzmc/diagnose.git
   commit: 4e4155e3e2153c11b825a6a58c5cb5af817128c9
-- aeson-2.2.0.0@sha256:deeab33f7f2a235c9e9ea76168f27a3669ad51bbdb363e830015352a3b2874ec,6217
+- aeson-2.1.2.1
 - alex-3.4.0.0@sha256:3c9e1e6b4f2f956623375dd15b904144dd3183b28f1ce1afcce11192f6d868dd,3900
 - data-default-0.7.1.1@sha256:2804e8d14f521a1edee88b68b66347448e7f3b685868290fdc55930e4471f5a9,645
 - dlist-1.0@sha256:55ff69d20ce638fc7727342ee67f2f868da61d3dcf3763f790bf9aa0b145e568,3812
