--- a/elara.cabal
+++ b/elara.cabal
@@ -284,6 +284,7 @@ test-suite elara-test
       Arbitrary.Literals
       Arbitrary.Names
       Common
+      Emit
       Infer
       Infer.Common
       Lex
