--- a/package.yaml
+++ b/package.yaml
@@ -63,7 +63,7 @@ ghc-options:
   # - -Wmissing-export-lists
   - -optP-Wno-nonportable-include-path # Fix annoying error on macOS
   - -feager-blackholing
-  - -fdefer-typed-holes
+  # - -fdefer-typed-holes
   - -fno-show-valid-hole-fits
   - -j4 +RTS -A32m -RTS
   - -flate-specialise
