try to fix some weird checkcasts

--- a/elara.cabal
+++ b/elara.cabal
@@ -68,6 +68,7 @@ library
       Elara.Emit.Lambda
       Elara.Emit.Method
       Elara.Emit.Operator
+      Elara.Emit.Params
       Elara.Emit.State
       Elara.Emit.Utils
       Elara.Emit.Var
