--- a/elara.cabal
+++ b/elara.cabal
@@ -160,6 +160,7 @@ library
     , polysemy
     , polysemy-log
     , polysemy-plugin
+    , polysemy-time
     , pretty-simple
     , prettyprinter
     , prettyprinter-ansi-terminal
@@ -213,6 +214,7 @@ executable elara
     , polysemy
     , polysemy-log
     , polysemy-plugin
+    , polysemy-time
     , pretty-simple
     , prettyprinter
     , prettyprinter-ansi-terminal
@@ -290,6 +292,7 @@ test-suite elara-test
     , polysemy
     , polysemy-log
     , polysemy-plugin
+    , polysemy-time
     , pretty-simple
     , prettyprinter
     , prettyprinter-ansi-terminal
