--- a/package.yaml
+++ b/package.yaml
@@ -60,13 +60,13 @@ ghc-options:
   - -Winaccessible-code
   - -Wincomplete-record-updates
   - -Wpartial-fields
-  - -Wno-partial-type-signatures 
+  - -Wno-partial-type-signatures
   # - -Werror=missing-home-modules
   - -Widentities
   # - -Wmissing-export-lists
   - -optP-Wno-nonportable-include-path # Fix annoying error on macOS
   - -feager-blackholing
-  # - -fdefer-typed-holes
+  - -fdefer-typed-holes
   - -fno-show-valid-hole-fits
   - -j4 +RTS -A32m -RTS
   - -flate-specialise
