--- a/stack.yaml
+++ b/stack.yaml
@@ -15,11 +15,16 @@ allow-newer-deps:
   - hedgehog
 
 extra-deps:
-- git: git@github.com:ElaraLang/h2jvm.git
+- git: 'https://github.com/ElaraLang/h2jvm.git'
   commit: 8e71345eac701c8bf3d7454a9987e3224aaa5768
-- git: git@github.com:knightzmc/diagnose.git
+- git: https://github.com/knightzmc/diagnose.git
   commit: 4e4155e3e2153c11b825a6a58c5cb5af817128c9
 - aeson-2.2.1.0
+- unix-2.8.5.1
+- Cabal-3.10.3.0@sha256:4a36954a66769eef90353daa0dbb07d43e49c228281383c7e4134445d495f714,12313
+- Cabal-syntax-3.10.3.0@sha256:c2ca36499bf9365726968b1e11a757e6d846c47cdf0c2c26a003698fd3c300fe,7431
+- directory-1.3.8.4@sha256:ae1730011f547153bb52139f217d1d524202b3da730a369660fc539e5dcfff31,3166
+- process-1.6.19.0@sha256:7785a72bc140ae5a9ef2439f10637b5fd104999832f1d93328d4973f37cb8469,3025
 - alex-3.4.0.0@sha256:3c9e1e6b4f2f956623375dd15b904144dd3183b28f1ce1afcce11192f6d868dd,3900
 - data-default-0.7.1.1@sha256:2804e8d14f521a1edee88b68b66347448e7f3b685868290fdc55930e4471f5a9,645
 - dlist-1.0@sha256:55ff69d20ce638fc7727342ee67f2f868da61d3dcf3763f790bf9aa0b145e568,3812
