fix crlf endings breaking lexer

--- a/elara.cabal
+++ b/elara.cabal
@@ -168,6 +168,7 @@ library
     , process
     , relude
     , safe-exceptions
+    , stringsearch
     , terminal-size
     , utf8-string
   mixins:
@@ -222,6 +223,7 @@ executable elara
     , process
     , relude
     , safe-exceptions
+    , stringsearch
     , terminal-size
     , utf8-string
   mixins:
@@ -300,6 +302,7 @@ test-suite elara-test
     , process
     , relude
     , safe-exceptions
+    , stringsearch
     , terminal-size
     , utf8-string
   mixins:
