--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
           cd /opt
           find . -maxdepth 1 -mindepth 1 '!' -path ./containerd '!' -path ./actionarchivecache '!' -path ./runner '!' -path ./runner-cache -exec rm -rf '{}' ';'
+          sudo du -d 1 -h / || echo ""
         
       - uses: DeterminateSystems/nix-installer-action@main
         name: Install Nix
