feat(renamer): :bug: Fix #14 and significantly improve error message quality for unknown names
Fixes issues where names are implicitly imported because other modules imported them. Additionally, significantly improves the quality of error messages related to unknown names, now suggesting typo fixes or imports to add

--- a/elara.cabal
+++ b/elara.cabal
@@ -175,6 +175,7 @@ library
     , safe-exceptions
     , stringsearch
     , terminal-size
+    , text-metrics
     , utf8-string
   mixins:
       base hiding (Prelude)
@@ -231,6 +232,7 @@ executable elara
     , safe-exceptions
     , stringsearch
     , terminal-size
+    , text-metrics
     , utf8-string
   mixins:
       base hiding (Prelude)
@@ -312,6 +314,7 @@ test-suite elara-test
     , safe-exceptions
     , stringsearch
     , terminal-size
+    , text-metrics
     , utf8-string
   mixins:
       base hiding (Prelude)
