refactor: :loud_sound: Refactor structured (i.e. potentially nested) logging into its own effect

--- a/elara.cabal
+++ b/elara.cabal
@@ -86,6 +86,7 @@ library
       Elara.Lexer.Reader
       Elara.Lexer.Token
       Elara.Lexer.Utils
+      Elara.Logging
       Elara.Parse
       Elara.Parse.Combinators
       Elara.Parse.Declaration
