fix class names

--- a/elara.cabal
+++ b/elara.cabal
@@ -65,6 +65,7 @@ library
       Elara.Data.Unwrap
       Elara.Desugar
       Elara.Emit
+      Elara.Emit.Utils
       Elara.Error
       Elara.Error.Codes
       Elara.Error.Effect
