--- a/package.yaml
+++ b/package.yaml
@@ -47,33 +47,34 @@ dependencies:
   - process
   - stringsearch
   - text-metrics
+  - algebraic-graphs
 
 ghc-options:
-  - -Wall
-  - -W
-  - -Wcompat
+  # - -Wall
+  # - -W
+  # - -Wcompat
   - -Wno-name-shadowing # Shadowing is good, actually
   # - -Weverything
   # - -Werror=incomplete-patterns
-  - -Werror=incomplete-uni-patterns
-  - -Wredundant-constraints
-  - -Wunused-imports
-  - -Wunused-foralls
-  - -Wmissing-fields
-  - -Winaccessible-code
-  - -Wincomplete-record-updates
-  - -Wpartial-fields
+  # - -Werror=incomplete-uni-patterns
+  # - -Wredundant-constraints
+  # - -Wunused-imports
+  # - -Wunused-foralls
+  # - -Wmissing-fields
+  # - -Winaccessible-code
+  # - -Wincomplete-record-updates
+  # - -Wpartial-fields
   - -Wno-partial-type-signatures
   # - -Werror=missing-home-modules
   - -Widentities
   # - -Wmissing-export-lists
   - -optP-Wno-nonportable-include-path # Fix annoying error on macOS
-  - -feager-blackholing
+  # - -feager-blackholing
   - -fdefer-typed-holes
   - -fno-show-valid-hole-fits
-  - -j4 +RTS -A32m -RTS
-  - -flate-specialise
-  - -fspecialise-aggressively
+  # - -j4 +RTS -A32m -RTS
+  # - -flate-specialise
+  # - -fspecialise-aggressively
   - -fplugin=Polysemy.Plugin
   - -fwrite-ide-info
   - -hiedir=.hie
