--- a/elara.cabal
+++ b/elara.cabal
@@ -311,6 +311,7 @@ test-suite elara-test
     , stringsearch
     , sydtest
     , sydtest-hedgehog
+    , template-haskell
     , terminal-size
     , text-metrics
     , utf8-string
