--- a/elara.cabal
+++ b/elara.cabal
@@ -158,7 +158,7 @@ library
     , lens
     , megaparsec
     , mtl
-    , optics
+    , optics >=0.4.1
     , parser-combinators
     , polysemy
     , polysemy-log
@@ -216,7 +216,7 @@ executable elara
     , lens
     , megaparsec
     , mtl
-    , optics
+    , optics >=0.4.1
     , parser-combinators
     , polysemy
     , polysemy-log
@@ -300,7 +300,7 @@ test-suite elara-test
     , megaparsec
     , mtl
     , neat-interpolation
-    , optics
+    , optics >=0.4.1
     , parser-combinators
     , polysemy
     , polysemy-log
