--- a/cliff.toml
+++ b/cliff.toml
@@ -62,7 +62,6 @@ footer = """
 trim = true
 # postprocessors
 postprocessors = [
-  # { pattern = '<REPO>', replace = "https://github.com/orhun/git-cliff" }, # replace repository URL
 ]
 
 [git]
@@ -75,27 +74,24 @@ split_commits = false
 # regex for preprocessing the commit messages
 commit_preprocessors = [
   # Replace issue numbers
-  { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "([#${2}](<REPO>/issues/${2}))"},
-  # Check spelling of the commit with https://github.com/crate-ci/typos
-  # If the spelling is incorrect, it will be automatically fixed.
-  #{ pattern = '.*', replace_command = 'typos --write-changes -' },
+  {pattern = '\((\w+\s)?#([0-9]+)\)', replace = "([#${2}](<REPO>/issues/${2}))"}
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
-  { message = "^feat", group = "<!-- 0 -->🚀 Features" },
-  { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
-  { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
-  { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
-  { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
-  { message = "^style", group = "<!-- 5 -->🎨 Styling" },
-  { message = "^test", group = "<!-- 6 -->🧪 Testing" },
-  { message = "^chore\\(release\\): prepare for", skip = true },
-  { message = "^chore\\(deps.*\\)", skip = true },
-  { message = "^chore\\(pr\\)", skip = true },
-  { message = "^chore\\(pull\\)", skip = true },
-  { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
-  { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
-  { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
+  {message = "^feat", group = "<!-- 0 -->🚀 Features"},
+  {message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes"},
+  {message = "^doc", group = "<!-- 3 -->📚 Documentation"},
+  {message = "^perf", group = "<!-- 4 -->⚡ Performance"},
+  {message = "^refactor", group = "<!-- 2 -->🚜 Refactor"},
+  {message = "^style", group = "<!-- 5 -->🎨 Styling"},
+  {message = "^test", group = "<!-- 6 -->🧪 Testing"},
+  {message = "^chore\\(release\\): prepare for", skip = true},
+  {message = "^chore\\(deps.*\\)", skip = true},
+  {message = "^chore\\(pr\\)", skip = true},
+  {message = "^chore\\(pull\\)", skip = true},
+  {message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks"},
+  {body = ".*security", group = "<!-- 8 -->🛡️ Security"},
+  {message = "^revert", group = "<!-- 9 -->◀️ Revert"}
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
@@ -111,9 +107,7 @@ filter_commits = false
 topo_order = false
 # sort the commits inside sections by oldest/newest order
 sort_commits = "oldest"
-# limit the number of commits included in the changelog.
-# limit_commits = 42
 
 [remote.github]
-owner="ElaraLang"
-repo="elara"
+owner = "ElaraLang"
+repo = "elara"
