--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -27,4 +27,4 @@ jobs:
           set +e
           git add CHANGELOG.md
           git commit -m "Update changelog"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git master
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/"${GITHUB_REPOSITORY}".git master
