--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,4 @@ jobs:
         with:
           name: elara
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-      - uses: yaxitech/nix-install-pkgs-action@v5
-        with:
-          packages: "github:srid/nixci"
-      - run: nixci build
+      - run: nix flake check
