--- a/elara.cabal
+++ b/elara.cabal
@@ -91,6 +91,7 @@ library
       Elara.Prim
       Elara.Prim.Core
       Elara.Prim.Rename
+      Elara.Query
       Elara.ReadFile
       Elara.Rename
       Elara.Shunt
@@ -114,6 +115,8 @@ library
       Polysemy.Utils
       Prelude
       Print
+      Rock
+      Rock.Memo
       TODO
   hs-source-dirs:
       src
@@ -128,7 +131,7 @@ library
       DeriveFunctor
       TypeApplications
       PartialTypeSignatures
-  ghc-options: -W -Wno-name-shadowing -Wno-partial-type-signatures -Widentities -optP-Wno-nonportable-include-path -fdefer-typed-holes -fno-show-valid-hole-fits -fplugin=Polysemy.Plugin -fwrite-ide-info -hiedir=.hie -O0 -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -W -Wno-name-shadowing -Wno-partial-type-signatures -Widentities -optP-Wno-nonportable-include-path -fdefer-typed-holes -fno-show-valid-hole-fits -fplugin=Polysemy.Plugin -fplugin=Effectful.Plugin -fwrite-ide-info -hiedir=.hie -O0 -threaded -rtsopts -with-rtsopts=-N
   build-tool-depends:
       alex:alex
   build-depends:
@@ -139,13 +142,20 @@ library
     , binary
     , bytestring
     , containers
+    , dependent-hashmap
+    , dependent-sum-template
     , diagnose
     , directory
+    , effectful
+    , effectful-core
+    , effectful-plugin
     , filepath
     , generic-optics
     , h2jvm
     , hashable
+    , kind-generics-th
     , lens
+    , lifted-base
     , matrix
     , megaparsec
     , mtl
@@ -161,6 +171,7 @@ library
     , process
     , relude
     , safe-exceptions
+    , some
     , stringsearch
     , terminal-size
     , text-metrics
@@ -184,7 +195,7 @@ executable elara
       DeriveFunctor
       TypeApplications
       PartialTypeSignatures
-  ghc-options: -W -Wno-name-shadowing -Wno-partial-type-signatures -Widentities -optP-Wno-nonportable-include-path -fdefer-typed-holes -fno-show-valid-hole-fits -fplugin=Polysemy.Plugin -fwrite-ide-info -hiedir=.hie -O0 -threaded -rtsopts -with-rtsopts=-N -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -W -Wno-name-shadowing -Wno-partial-type-signatures -Widentities -optP-Wno-nonportable-include-path -fdefer-typed-holes -fno-show-valid-hole-fits -fplugin=Polysemy.Plugin -fplugin=Effectful.Plugin -fwrite-ide-info -hiedir=.hie -O0 -threaded -rtsopts -with-rtsopts=-N -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
     , algebraic-graphs
@@ -193,14 +204,21 @@ executable elara
     , binary
     , bytestring
     , containers
+    , dependent-hashmap
+    , dependent-sum-template
     , diagnose
     , directory
+    , effectful
+    , effectful-core
+    , effectful-plugin
     , elara
     , filepath
     , generic-optics
     , h2jvm
     , hashable
+    , kind-generics-th
     , lens
+    , lifted-base
     , matrix
     , megaparsec
     , mtl
@@ -216,6 +234,7 @@ executable elara
     , process
     , relude
     , safe-exceptions
+    , some
     , stringsearch
     , terminal-size
     , text-metrics
@@ -261,7 +280,7 @@ test-suite elara-test
       TypeApplications
       PartialTypeSignatures
       QuasiQuotes
-  ghc-options: -W -Wno-name-shadowing -Wno-partial-type-signatures -Widentities -optP-Wno-nonportable-include-path -fdefer-typed-holes -fno-show-valid-hole-fits -fplugin=Polysemy.Plugin -fwrite-ide-info -hiedir=.hie -O0 -threaded -rtsopts -with-rtsopts=-N -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -W -Wno-name-shadowing -Wno-partial-type-signatures -Widentities -optP-Wno-nonportable-include-path -fdefer-typed-holes -fno-show-valid-hole-fits -fplugin=Polysemy.Plugin -fplugin=Effectful.Plugin -fwrite-ide-info -hiedir=.hie -O0 -threaded -rtsopts -with-rtsopts=-N -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
     , QuickCheck
@@ -272,8 +291,13 @@ test-suite elara-test
     , binary
     , bytestring
     , containers
+    , dependent-hashmap
+    , dependent-sum-template
     , diagnose
     , directory
+    , effectful
+    , effectful-core
+    , effectful-plugin
     , elara
     , filepath
     , generic-optics
@@ -281,7 +305,9 @@ test-suite elara-test
     , hashable
     , hedgehog
     , hspec-megaparsec
+    , kind-generics-th
     , lens
+    , lifted-base
     , matrix
     , megaparsec
     , mtl
@@ -298,6 +324,7 @@ test-suite elara-test
     , process
     , relude
     , safe-exceptions
+    , some
     , stringsearch
     , sydtest
     , sydtest-hedgehog
